Added google form

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                                 <!-- Card Body -->
                                 <div class="card-body">
                                     <div class="chart-area">
-                                        google form here
+                                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeP9BlTG4ykVFedTqPUNfz2pyKfo4TOy5R0Igf6J2Yl_bCkMQ/viewform?embedded=true" width="100%" height="557" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                                         <!-- <canvas id="myAreaChart"></canvas> -->
                                     </div>
                                 </div>
