Users count works

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Subscribed users</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">12</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800" id="users">{{users}}</div>
                                         </div>
                                         <div class="col-auto">
                                             <i class="fas fa-users fa-2x text-gray-300"></i>
@@ -179,7 +179,7 @@
                                     <div class="card-body" v-else >
                                       <div class="table-responsive">
 
-                                    <table  id="example" class="display" style="width:100%">
+                                    <table id="example" class="display" style="width:100%">
                                         <thead>
                                             <tr>
                                                 <th>Topic</th>
